@@ -79,6 +79,10 @@ gradle build -x test
     --add-opens java.base/java.lang.ref=ALL-UNNAMED
     --add-opens java.base/java.lang.invoke=ALL-UNNAMED
     --add-opens java.base/sun.security.util=ALL-UNNAMED
+    --add-opens java.logging/java.util.logging=ALL-UNNAMED
+    --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+    --add-opens java.base/java.net=ALL-UNNAMED
+    --add-opens java.base/sun.util.calendar=ALL-UNNAMED
     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
     --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
     --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
